Apply stashed changes: settings, first_setup, karo, shutsujin_departure (merge upstream + ASHIGARU_COUNT)

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -6,6 +6,9 @@
 # その他の言語コード（es, zh, ko, fr, de 等）も対応
 language: ja
 
+# 足軽の人数（家老が割り当てるワーカー数）。2～10。tmux ペイン・タスク/レポートファイル数に影響
+ashigaru_count: 8
+
 # スキル設定
 skill:
   # スキル保存先（生成されたスキルはここに保存）
