--- a/Shogun.Avalonia/Shogun.Avalonia.csproj
+++ b/Shogun.Avalonia/Shogun.Avalonia.csproj
@@ -29,12 +29,12 @@
     <PackageReference Include="Avalonia.Desktop" Version="11.3.11" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.11" />
     <PackageReference Include="ActiproSoftware.Controls.Avalonia" Version="25.2.2" />
-    <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.3.0" />
+    <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.4.0" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.11" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Velopack" Version="0.0.1298" />
     <PackageReference Include="log4net" Version="3.2.0" />
-    <PackageReference Include="VYaml" Version="1.2.0" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="log4net.config">
